fix: color scrollbar

--- a/movie-project/src/app/globals.css
+++ b/movie-project/src/app/globals.css
@@ -63,7 +63,7 @@ html {
 }
 
 ::-webkit-scrollbar-thumb {
-  background-color: var(--bg-navbar);
+  background-color: var(--bg-main-second);
 }
 
 .show-text {
